--- a/index.html
+++ b/index.html
@@ -40,25 +40,25 @@
     </header>
     <main>
         <section id="section-quem-sou">
-            <div>
-                <div id="title-quem-sou">
-                    <div>
-                        <h1>QUEM SOU?</h1>
-                    </div>
-                    <div>
-                        <p>Henrique Silva Stolle, 18 anos</p>
-                        <p>Aluno de Ciência e Tecnologia na UFSC de Joinville & Recém-formado como Técnico em
-                            Desenvolvimento de Sistemas pelo SENAI (2024), com paixão por tecnologia e aprendizado
-                            constante. </p>
-                        <p>Busco minha primeira oportunidade como estagiário ou trainee para aplicar meus conhecimentos
-                            e contribuir com soluções inovadoras.</p>
-                    </div>
-                </div>
+            <div id="title-quem-sou">
                 <div>
-                    <img src="" alt="" srcset="">
+                    <h1 id="h1-quem-sou">Quem Sou?</h1>
+                </div>
+                <div id="img-div">
+                    <img id="img-quem-sou" src="./assets/minha-foto.png" alt="henrique silva stolle">
+                </div>
+                <div id="coteiner-p">
+                    <p>Henrique Silva Stolle, 18 anos</p>
+                    <p>Aluno de <span style="color: #2196f3;">Ciência e Tecnologia na UFSC de Joinville & Recém-formado
+                            como Técnico em
+                            Desenvolvimento de Sistemas pelo SENAI</span> (2024), com paixão por tecnologia e
+                        aprendizado
+                        constante. </p>
+                    <p>Busco minha <span style="color: #2196f3;">primeira oportunidade</span> como <span
+                            style="color: #2196f3;">estagiário ou trainee</span> para aplicar meus conhecimentos
+                        e contribuir com soluções inovadoras.</p>
                 </div>
             </div>
-
         </section>
     </main>
 </body>
