add: base em html do site

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
     <script src="./script.js"></script>
+    <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
     <title>Portfólio Pessoal</title>
 </head>
 
@@ -60,7 +61,69 @@
                 </div>
             </div>
         </section>
+        <section id="section-soft-skills">
+            <div id="general">
+                <div id="title-soft-skills">
+                    <h2>Soft Skills</h2>
+                </div>
+                <ul>
+                    <li>Educação</li>
+                    <li>Adaptabilidade</li>
+                    <li>Ética profissional</li>
+                    <li>Trabalho em Equipe</li>
+                    <li>Inteligência Emocional</li>
+                    <li>Produtividade Inteligente</li>
+                </ul>
+            </div>
+        </section>
+
+        <section id="section-hard-skills">
+            <div id="general">
+                <div id="title-hard-skills">
+                    <h2>Hard Skills</h2>
+                    <p>Algumas das principais Tecnologias com as quais já realizei projetos e tive contato</p>
+                </div>
+                <ul>
+                    <li>HTML 5</li>
+                    <li>CSS 3</li>
+                    <li>PHP 8</li>
+                    <li>SQL</li>
+                    <li>JavaScript</li>
+                </ul>
+            </div>
+        </section>
     </main>
+    <footer>
+        <div id="conteiner-footer">
+            <div id="title-footer">
+                <h2>FALE COMIGO!</h2>
+            </div>
+            <div id="nome-redes">
+                <p>@henriquestolle</p>
+                <p>Instagram</p>
+                <p>LinkedIn</p>
+            </div>
+            <div id="email">
+                <p>ENDEREÇO DE EMAIL</p>
+                <p>stollehenriquecomercial@gmail.com</p>
+            </div>
+            <div>
+                <p>NÚMERO DE TELEFONE</p>
+                <p>(47) 98828-4513</p>
+            </div>
+            <div id="img-rede-social">
+                <img src="#" alt="email">
+                <img src="#" alt="linkedin">
+                <img src="#" alt="instagram">
+            </div>
+        </div>
+        <div id="direitos-reservados">
+            <p>
+                <i class="fas fa-copyright"></i> 2025 - Todos os direitos reservados a
+                <a href="#" target="_blank">Henrique Silva Stolle</a>.
+            </p>
+        </div>
+    </footer>
 </body>
 
 
