fixed and add: img and description about me

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </div>
         <div class="menu" id="menu">
             <div class="menu-content">
-                <a href="#">Quem sou?</a>
+                <a href="#">Sobre</a>
                 <a href="#">Soft Skills</a>
                 <a href="#">Hard Skills</a>
                 <a href="#">Contato</a>
@@ -69,7 +69,7 @@
                 </a>
             </li>
             <li>
-                <a href="https://www.linkedin.com/in/henriquestolle/" target="_blank" title="LinkedIn">
+                <a href="https://www.linkedin.com/in/henrique-silva-stolle-51a260253/" target="_blank" title="LinkedIn">
                     <svg class="icon-svg icon-2x" viewBox="0 0 16 16">
                         <path
                             d="M0 1.146C0 .513.526 0 1.175 0h13.65C15.474 0 16 .513 16 1.146v13.708c0 .633-.526 1.146-1.175 1.146H1.175C.526 16 0 15.487 0 14.854V1.146zm4.943 12.248V6.169H2.542v7.225h2.401zm-1.2-8.212c.837 0 1.358-.554 1.358-1.248-.015-.709-.52-1.248-1.342-1.248-.822 0-1.359.54-1.359 1.248 0 .694.521 1.248 1.327 1.248h.016zm4.908 8.212V9.359c0-.216.016-.432.08-.586.173-.431.568-.878 1.232-.878.869 0 1.216.662 1.216 1.634v3.865h2.401V9.25c0-2.22-1.184-3.252-2.764-3.252-1.274 0-1.845.7-2.165 1.193v.025h-.016a5.54 5.54 0 0 1 .016-.025V6.169h-2.4c.03.678 0 7.225 0 7.225h2.4z">
@@ -83,21 +83,17 @@
         <section id="section-quem-sou">
             <div id="title-quem-sou">
                 <div>
-                    <h1 id="h1-quem-sou">Quem Sou?</h1>
+                    <h5 id="h5-quem-sou">SOBRE</h5>
+                    <h6 id="trajetoria-h6">Vou contar um pouco sobre minha trajetória até aqui...</h6>
                 </div>
                 <div id="img-div">
                     <img id="img-quem-sou" src="./assets/minha-foto.png" alt="henrique silva stolle">
                 </div>
                 <div id="coteiner-p">
-                    <p>Henrique Silva Stolle, 18 anos</p>
-                    <p>Aluno de <span style="color: #2196f3;">Ciência e Tecnologia na UFSC de Joinville & Recém-formado
-                            como Técnico em
-                            Desenvolvimento de Sistemas pelo SENAI</span> (2024), com paixão por tecnologia e
-                        aprendizado
-                        constante. </p>
-                    <p>Busco minha <span style="color: #2196f3;">primeira oportunidade</span> como <span
-                            style="color: #2196f3;">estagiário ou trainee</span> para aplicar meus conhecimentos
-                        e contribuir com soluções inovadoras.</p>
+                    <p>"Apaixonado por tecnologia, sou formado como Técnico em Desenvolvimento de Sistemas pelo SENAI
+                        (2024) e iniciando o Bacharelado em Ciência e Tecnologia na UFSC (2025). Busco minha primeira
+                        oportunidade em TI para aplicar minhas habilidades em PHP, SQL, JavaScript, HTML e CSS,
+                        aliando criatividade, proatividade e trabalho em equipe."</p>
                 </div>
             </div>
         </section>
