--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         <div class="menu" id="menu">
             <div class="menu-content">
                 <a href="#">Sobre</a>
+                <a href="#">Perfil</a>
                 <a href="#">Soft Skills</a>
                 <a href="#">Hard Skills</a>
                 <a href="#">Contato</a>
@@ -97,6 +98,39 @@
                 </div>
             </div>
         </section>
+        <!-- PERFIL -->
+        <section id="section-perfil">
+            <div id="title-perfil">
+                <div>
+                    <h5 id="h5-perfil">PERFIL</h5>
+                    <h6 id="perfil-description">Apaixonado por tecnologia, proativo, criativo, comunicativo, dedicado e
+                        em constante aprendizado.</h6>
+                </div>
+                <ul class="info-list">
+                    <li>
+                        <strong>Nome:</strong>
+                        <span>Henrique Silva Stolle</span>
+                    </li>
+                    <li>
+                        <strong>Nascimento:</strong>
+                        <span>09 de Outubro de 2006</span>
+                    </li>
+                    <li>
+                        <strong>Cargo em busca:</strong>
+                        <span>Estágio, Treinee ou Jovem Aprendiz em T.I.</span>
+                    </li>
+                    <li>
+                        <strong>Website:</strong>
+                        <span>henriquestolle.github.io</span>
+                    </li>
+                    <li>
+                        <strong>Email:</strong>
+                        <span>stollehenriquecomercial@gmail.com</span>
+                    </li>
+                </ul>
+            </div>
+        </section>
+        <!-- SOFT SKILLS -->
         <section id="section-soft-skills">
             <div id="general">
                 <div id="title-soft-skills">
@@ -112,7 +146,7 @@
                 </ul>
             </div>
         </section>
-
+        <!-- HARD SKILLS -->
         <section id="section-hard-skills">
             <div id="general">
                 <div id="title-hard-skills">
@@ -129,6 +163,7 @@
             </div>
         </section>
     </main>
+    <!-- FOOTER -->
     <footer>
         <div id="conteiner-footer">
             <div id="title-footer">
