add: soft skills

--- a/index.html
+++ b/index.html
@@ -134,13 +134,13 @@
         <section id="section-soft-skills">
             <div id="general">
                 <div id="title-soft-skills">
-                    <h2>Soft Skills</h2>
+                    <h5>SOFT SKILLS</h5>
                 </div>
-                <ul>
+                <ul class="list-soft-skills">
                     <li>Educação</li>
                     <li>Adaptabilidade</li>
-                    <li>Ética profissional</li>
                     <li>Trabalho em Equipe</li>
+                    <li>Ética profissional</li>
                     <li>Inteligência Emocional</li>
                     <li>Produtividade Inteligente</li>
                 </ul>
@@ -162,6 +162,8 @@
                 </ul>
             </div>
         </section>
+        <a href="./assets/henrique-stolle-curriculo.pdf" title="Baixar Currículo" class="button button-primary"
+            download="">DONWLOAD CURRÍCULO</a>
     </main>
     <!-- FOOTER -->
     <footer>
