fixed & add: problem with menu-burger fixed. smooth scrolling

--- a/index.html
+++ b/index.html
@@ -91,7 +91,8 @@
                     <img id="img-quem-sou" src="./assets/minha-foto.png" alt="henrique silva stolle">
                 </div>
                 <div id="coteiner-p">
-                    <p>"Apaixonado por tecnologia, sou formado como Técnico em Desenvolvimento de Sistemas pelo SENAI
+                    <p class="fade-in">"Apaixonado por tecnologia, sou formado como Técnico em Desenvolvimento de
+                        Sistemas pelo SENAI
                         (2024) e iniciando o Bacharelado em Ciência e Tecnologia na UFSC (2025). Busco minha primeira
                         oportunidade em TI para aplicar minhas habilidades em PHP, SQL, JavaScript, HTML e CSS,
                         aliando criatividade, proatividade e trabalho em equipe."</p>
@@ -101,12 +102,13 @@
         <!-- PERFIL -->
         <section id="section-perfil">
             <div id="title-perfil">
-                <div>
+                <div class="fade-in">
                     <h5 id="h5-perfil">PERFIL</h5>
-                    <h6 id="perfil-description">Apaixonado por tecnologia, proativo, criativo, comunicativo, dedicado e
+                    <h6 id="perfil-description">Apaixonado por tecnologia, proativo, criativo,
+                        comunicativo, dedicado e
                         em constante aprendizado.</h6>
                 </div>
-                <ul class="info-list">
+                <ul class="info-list" class="fade-in">
                     <li>
                         <strong>Nome:</strong>
                         <span>Henrique Silva Stolle</span>
@@ -131,7 +133,7 @@
             </div>
         </section>
         <!-- SOFT SKILLS -->
-        <section id="section-soft-skills">
+        <section id="section-soft-skills" class="fade-in">
             <div id="general">
                 <div id="title-soft-skills">
                     <h5>SOFT SKILLS</h5>
@@ -147,7 +149,7 @@
             </div>
         </section>
         <!-- HARD SKILLS -->
-        <section id="section-hard-skills">
+        <section id="section-hard-skills" class="fade-in">
             <div id="general">
                 <div id="title-hard-skills">
                     <h2>Hard Skills</h2>
@@ -166,7 +168,7 @@
             download="">DONWLOAD CURRÍCULO</a>
     </main>
     <!-- FOOTER -->
-    <footer>
+    <footer class="fade-in">
         <div id="conteiner-footer">
             <div id="title-footer">
                 <h2>FALE COMIGO!</h2>
