--- a/index.html
+++ b/index.html
@@ -7,15 +7,19 @@
     <link rel="stylesheet" href="style.css" />
     <script src="./script.js"></script>
     <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
+    <link rel="shortcut icon" href="./assets/logo.png" type="image/x-icon">
     <title>Portfólio Pessoal</title>
 </head>
 
 <body>
     <header>
-        <div class="menu-icon" onclick="toggleMenu()">
-            <div class="bar"></div>
-            <div class="bar"></div>
-            <div class="bar"></div>
+        <div class="conteiner-header">
+            <p>HENRIQUE STOLLE</p>
+            <div class="menu-icon" onclick="toggleMenu()">
+                <div class="bar"></div>
+                <div class="bar"></div>
+                <div class="bar"></div>
+            </div>
         </div>
         <div class="menu" id="menu">
             <div class="menu-content">
