add: start hard skills

--- a/index.html
+++ b/index.html
@@ -156,20 +156,43 @@
         <section id="section-hard-skills" class="fade-in">
             <div id="general">
                 <div id="title-hard-skills">
-                    <h2>Hard Skills</h2>
+                    <h5>HARD SKILLS</h5>
                     <p>Algumas das principais Tecnologias com as quais já realizei projetos e tive contato</p>
                 </div>
-                <ul>
-                    <li>HTML 5</li>
-                    <li>CSS 3</li>
-                    <li>PHP 8</li>
-                    <li>SQL</li>
-                    <li>JavaScript</li>
-                </ul>
+                <div id="conteiner-skills-list">
+                    <div class="skills-list">
+                        <p>TECNOLOGIAS</p>
+                        <ul>
+                            <li>HTML 5</li>
+                            <li>CSS 3</li>
+                            <li>PHP 8</li>
+                            <li>SQL</li>
+                            <li>JavaScript</li>
+                            <li>Python</li>
+                        </ul>
+                    </div>
+                    <div class="skills-list">
+                        <p>FERRAMENTAS</p>
+                        <ul>
+                            <li>GitHub</li>
+                            <li>VSCode</li>
+                            <li>Canva</li>
+                            <li>Trello</li>
+                        </ul>
+                    </div>
+                    <div class="skills-list">
+                        <p>LINGUAS</p>
+                        <ul>
+                            <li>Português | Nativo</li>
+                            <li>Inglês | Avançado</li>
+                            <li>Espanhol | Básico</li>
+                        </ul>
+                    </div>
+                </div>
             </div>
+            <a id="btn-download" href="./assets/henrique-stolle-curriculo.pdf" title="Baixar Currículo"
+                download="">DONWLOAD CV</a>
         </section>
-        <a href="./assets/henrique-stolle-curriculo.pdf" title="Baixar Currículo" class="button button-primary"
-            download="">DONWLOAD CURRÍCULO</a>
     </main>
     <!-- FOOTER -->
     <footer class="fade-in">
