add: menu bar ok

--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
         </div>
         <div class="menu" id="menu">
             <div class="menu-content">
-                <a href="#">Sobre</a>
-                <a href="#">Perfil</a>
-                <a href="#">Soft Skills</a>
-                <a href="#">Hard Skills</a>
-                <a href="#">Contato</a>
+                <a href="#section-quem-sou">Sobre</a>
+                <a href="#section-perfil">Perfil</a>
+                <a href="#section-soft-skills">Soft Skills</a>
+                <a href="#section-hard-skills">Hard Skills</a>
+                <a href="#conteiner-footer">Contato</a>
             </div>
         </div>
         <div>
