--- a/index.html
+++ b/index.html
@@ -8,7 +8,22 @@
     <script src="./script.js"></script>
     <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
     <link rel="shortcut icon" href="./assets/logo.png" type="image/x-icon">
-    <title>Portfólio Pessoal</title>
+    <title> Henrique Silva Stolle | Portfólio de Desenvolvimento de Sistemas</title>
+    <meta name="author" content="Henrique Stolle">
+
+    <meta name="description"
+        content="Explore o portfólio de Henrique Silva Stolle, desenvolvedor de sistemas. Conheça seus projetos, habilidades e trajetória profissional na área de TI.">
+    <meta name="keywords"
+        content="Portfólio de TI, Desenvolvedor de sistemas, Henrique Stolle, Programação web, Estágio em TI, Desenvolvimento de software, PHP, SQL, JavaScript, HTML, CSS">
+
+    <meta property="og:title" content="Henrique Stolle | Portfólio de Desenvolvimento de Sistemas">
+    <meta property="og:description"
+        content="Explore o portfólio de Henrique Stolle, desenvolvedor de sistemas. Conheça seus projetos, habilidades e trajetória profissional na área de TI.">
+    <meta property="og:image" content="./assets/img-site.png">
+    <meta property="og:url" content="https://henriquestolle.github.io/portfolio/">
+    <meta property="og:type" content="website">
+
+    <meta name="robots" content="index, follow">
 </head>
 
 <body>
