fixed: SEO Updated

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <meta name="description"
         content="Explore o portfólio de Henrique Silva Stolle, desenvolvedor de sistemas. Conheça seus projetos, habilidades e trajetória profissional na área de TI.">
     <meta name="keywords"
-        content="Portfólio de TI, Desenvolvedor de sistemas, Henrique Stolle, Programação web, Estágio em TI, Desenvolvimento de software, PHP, SQL, JavaScript, HTML, CSS">
+        content="Henrique Silva Stolle, Henrique Stolle, Henrique Silva, Henrique, portfólio de TI, desenvolvedor de software, programação, desenvolvimento web, PHP, JavaScript, SQL, HTML, CSS, estágio TI">
 
     <meta property="og:title" content="Henrique Stolle | Portfólio de Desenvolvimento de Sistemas">
     <meta property="og:description"
