add: more text about me

--- a/index.html
+++ b/index.html
@@ -110,11 +110,16 @@
                     <img id="img-quem-sou" src="./assets/minha-foto.png" alt="henrique silva stolle">
                 </div>
                 <div id="coteiner-p">
-                    <p class="fade-in">"Apaixonado por tecnologia, sou formado como Técnico em Desenvolvimento de
-                        Sistemas pelo SENAI
-                        (2024) e iniciando o Bacharelado em Ciência e Tecnologia na UFSC (2025). Busco minha primeira
-                        oportunidade em TI para aplicar minhas habilidades em PHP, SQL, JavaScript, HTML e CSS,
-                        aliando criatividade, proatividade e trabalho em equipe."</p>
+                    <p class="fade-in">
+                        "Apaixonado por tecnologia e inovação, sou formado como Técnico em
+                        Desenvolvimento de Sistemas
+                        pelo SENAI (2024) e atualmente iniciei o Bacharelado em Ciência e Tecnologia na
+                        UFSC (2025)."</p>
+                    <p>Busco minha primeira oportunidade na área de TI para aplicar e aprimorar minhas habilidades em
+                        PHP, SQL, JavaScript, HTML e CSS. Tenho grande interesse em desenvolvimento web e sistemas,
+                        sempre focando em soluções eficientes e criativas. Com proatividade, trabalho em equipe e
+                        uma mentalidade voltada para a aprendizagem contínua, estou pronto para agregar valor a projetos
+                        desafiadores e contribuir para o crescimento da empresa.</p>
                 </div>
             </div>
         </section>
