--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         </div>
         <div class="menu" id="menu">
             <div class="menu-content">
-                <a href="#section-quem-sou">Sobre</a>
+                <a href="#section-quem-sou">Sobre mim</a>
                 <a href="#section-perfil">Perfil</a>
                 <a href="#section-soft-skills">Soft Skills</a>
                 <a href="#section-hard-skills">Hard Skills</a>
@@ -103,7 +103,7 @@
         <section id="section-quem-sou">
             <div id="title-quem-sou">
                 <div>
-                    <h5 id="h5-quem-sou">SOBRE</h5>
+                    <h5 id="h5-quem-sou">SOBRE MIM</h5>
                     <h6 id="trajetoria-h6">Vou contar um pouco sobre minha trajetória até aqui...</h6>
                 </div>
                 <div id="img-div">
@@ -139,7 +139,7 @@
                     </li>
                     <li>
                         <strong>Nascimento:</strong>
-                        <span>09 de Outubro de 2006</span>
+                        <span>09 de Outubro de 2006 (18 anos)</span>
                     </li>
                     <li>
                         <strong>Cargo em busca:</strong>
@@ -147,7 +147,7 @@
                     </li>
                     <li>
                         <strong>Website:</strong>
-                        <span>henriquestolle.github.io</span>
+                        <span>henriquestolle.com</span>
                     </li>
                     <li>
                         <strong>Email:</strong>
@@ -388,8 +388,9 @@
             </div>
         </div>
         <div id="direitos-reservados">
-            <p>
-                <i class="fas fa-copyright"></i> 2025 - Todos os direitos reservados a
+            <p id="texto-direitos-reservados">
+                &copy;
+                2025 - Todos os direitos reservados a
                 <a style="text-decoration: none; color: #e6fa03;" href="mailto:stollehenriquecomercial@gmail.com"
                     target="_blank">Henrique Silva Stolle</a>.
             </p>
