--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
                     </li>
                     <li>
                         <strong>Website:</strong>
-                        <span>henriquestolle.com</span>
+                        <span>henriquestolle.github.io/portfolio/</span>
                     </li>
                     <li>
                         <strong>Email:</strong>
