fixed: image, card and CV.

--- a/index.html
+++ b/index.html
@@ -110,14 +110,11 @@
                     <img id="img-quem-sou" src="./assets/minha-foto.png" alt="henrique silva stolle">
                 </div>
                 <div id="coteiner-p">
-                    <p class="fade-in">
-                        "Apaixonado por tecnologia e inovação, sou formado como Técnico em
-                        Desenvolvimento de Sistemas
-                        pelo SENAI (2024) e atualmente iniciei o Bacharelado em Ciência e Tecnologia na
-                        UFSC (2025)."</p>
-                    <p>Busco minha primeira oportunidade na área de TI para aplicar e aprimorar minhas habilidades em
-                        PHP, SQL, JavaScript, HTML e CSS. Tenho grande interesse em desenvolvimento web e sistemas,
-                        sempre focando em soluções eficientes e criativas. Com proatividade, trabalho em equipe e
+                    <p class="fade-in card">
+                        Apaixonado por tecnologia, sou Técnico em Desenvolvimento de Sistemas (SENAI, 2024) e estudante
+                        de Ciência e Tecnologia (UFSC, 2025).
+                        Busco minha primeira oportunidade na área de TI para aplicar e aprimorar minhas habilidades em
+                        PHP, SQL, JavaScript, HTML e CSS. Com proatividade, trabalho em equipe e
                         uma mentalidade voltada para a aprendizagem contínua, estou pronto para agregar valor a projetos
                         desafiadores e contribuir para o crescimento da empresa.</p>
                 </div>
@@ -158,7 +155,7 @@
         </section>
         <!-- SOFT SKILLS -->
         <section id="section-soft-skills" class="fade-in">
-            <div id="general">
+            <div class="card">
                 <div id="title-soft-skills">
                     <h5>SOFT SKILLS</h5>
                 </div>
@@ -174,7 +171,7 @@
         </section>
         <!-- HARD SKILLS -->
         <section id="section-hard-skills" class="fade-in">
-            <div id="general">
+            <div>
                 <div id="title-hard-skills">
                     <h5>HARD SKILLS</h5>
                     <p>Algumas das principais Tecnologias com as quais já realizei projetos e tive contato</p>
