add: style.css & botão "Ver Projetos"

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="shortcut icon" href="./assets/logo.png" type="image/x-icon">
     <title> Henrique Silva Stolle | Portfólio de Desenvolvimento de Sistemas</title>
     <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="stylesheet" href="style.css">
     <meta name="author" content="Henrique Stolle">
 
     <meta name="description"
@@ -23,14 +24,6 @@
 
     <meta name="robots" content="index, follow">
 </head>
-<style>
-    .line-clamp-3 {
-        display: -webkit-box;
-        -webkit-line-clamp: 3;
-        -webkit-box-orient: vertical;
-        overflow: hidden;
-    }
-</style>
 
 <body class="bg-white text-gray-900">
     <header class="bg-white shadow-md p-6 flex justify-between items-center fixed w-full top-0 z-50">
@@ -59,9 +52,8 @@
         <h2 class="text-5xl font-bold">Olá, Henrique 👋</h2>
         <p class="text-2xl mt-4">Desenvolvedor de Sistemas Web e Mobile</p>
         <div class="mt-6">
-            <a href="#projects"
-                class=" bg-white text-blue-900 px-6 py-3 rounded-lg font-semibold hover:bg-gray-200">Veja Meus
-                Projetos</a>
+            <a href="#projects" class=" bg-white text-blue-900 px-6 py-3 rounded-lg font-semibold hover:bg-gray-200">
+                Ver Projetos</a>
             <a href="./assets/henrique-stolle-curriculo.pdf" title="Baixar Currículo" target="_blank"
                 class="bg-yellow-500 text-white-900 px-6 py-3 rounded-lg font-semibold hover:bg-yellow-300">Download
                 CV</a>
