fixed: description of the svg

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <header
         class="z-50 fixed right-0 top-0 left-0 border-2 w-56 flex items-center justify-center m-auto mt-4  text-center rounded-2xl p-2 gap-2 duration-200 bg-white shadow-sm">
         <div class="m-auto">
-            <a class="rounded-full text-black" href="./index.html">
+            <a class="rounded-full text-black" href="./index.html" title="Home">
                 <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
                     stroke="currentColor" id="home-svg"
                     class="w-5 h-5 transition-transform transform hover:scale-125 duration-200">
@@ -41,8 +41,8 @@
         <div class="ml-1 h-6 bg-gray-300" style="width: 1px;"></div>
 
         <div class="flex gap-4 m-auto">
-            <a class="rounded-full text-black" href="https://www.linkedin.com/in/henriquestolle/" target="_blank"
-                aria-label="LinkedIn">
+            <a class="rounded-full text-black" href="https://www.linkedin.com/in/henriquestolle/" title="LinkedIn"
+                target="_blank" aria-label="LinkedIn">
                 <svg class="w-5 h-5 transition-transform transform hover:scale-125 duration-200" fill="black"
                     xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid" viewBox="0 0 256 256">
                     <path
@@ -50,7 +50,7 @@
                 </svg>
             </a>
 
-            <a href="https://wa.me/5547988284513" target="_blank" aria-label="WhatsApp">
+            <a href="https://github.com/henriquestolle" target="_blank" aria-label="GitHub" title="GitHub">
                 <svg class="w-5 h-5 transition-transform transform hover:scale-125 duration-200" viewBox="0 0 256 250"
                     fill="black" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid">
                     <path
@@ -59,7 +59,7 @@
             </a>
 
 
-            <a href="mailto:henriquestollecomercial@gmail.com" target="_blank" aria-label="Email">
+            <a href="mailto:henriquestollecomercial@gmail.com" target="_blank" title="Email" aria-label="Email">
                 <svg class="w-5 h-5 transition-transform transform hover:scale-125 duration-200"
                     xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="black">
                     <path
